--- a/collection/CMakeLists.txt
+++ b/collection/CMakeLists.txt
@@ -15,7 +15,7 @@ else ()
 
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
 
-    set(SOURCE_FILES Queue.h)
+    set(SOURCE_FILES Queue.h List.h)
 
     add_library(collection_lib STATIC ${SOURCE_FILES})
     set_target_properties(collection_lib PROPERTIES LINKER_LANGUAGE CXX)
