--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,9 @@
 cmake_minimum_required(VERSION 3.2)
 
 
+set(BOOST_ROOT /local/tools/boost_1_61_0)
+set(BOOST_INCLUDEDIR /local/tools/boost_1_61_0) # headers
+set(BOOST_INCLUDE_DIR /local/tools/boost_1_61_0) # headers
+set(BOOST_LIBRARY_DIR /local/tools/boost_1_61_0/stage/lib)# linked library(so)
+
 add_subdirectory(main)
