--- a/fs/CMakeLists.txt
+++ b/fs/CMakeLists.txt
@@ -25,7 +25,7 @@ else ()
 
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
 
-    set(SOURCE_FILES Line.cpp FileWriter.cpp segment/SegmentReservations.h segment/Segment.cpp segment/Segment.h segment/Reservations.h segment/Segments.h segment/SegmentJournal.h LineWriter.cpp LineWriter.h)
+    set(SOURCE_FILES Line.cpp FileWriter.cpp segment/SegmentReservations.h segment/Segment.cpp segment/Segment.h segment/Reservations.h segment/Segments.h segment/SegmentJournal.h LineWriter.cpp LineWriter.h segment/format/Format.cpp segment/format/Format.h segment/SegmentFile.h)
 
     add_library(fs_lib STATIC ${SOURCE_FILES})
     set_target_properties(fs_lib PROPERTIES LINKER_LANGUAGE CXX)
