--- a/collection/CMakeLists.txt
+++ b/collection/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 2.8)
 
 set(COLLECTION_LIB_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 
+add_subdirectory(test)
 if (TARGET collection_lib)
 
     message("collection_lib is already defined")
@@ -11,11 +12,11 @@ else ()
     add_subdirectory(../shared shared_lib)
     include_directories(shared)
     link_directories(${SHARED_LIB_INCLUDE_DIR})
-    #
+    #Test
 
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
 
-    set(SOURCE_FILES Queue.h List.h)
+    set(SOURCE_FILES Queue.h List.h CBitset.cpp)
 
     add_library(collection_lib STATIC ${SOURCE_FILES})
     set_target_properties(collection_lib PROPERTIES LINKER_LANGUAGE CXX)
