--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 3.2)
 
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -Wextra -Wall")
 
 set(BOOST_ROOT /local/tools/boost_1_61_0)
 set(BOOST_INCLUDEDIR /local/tools/boost_1_61_0) # headers
