--- a/collection/CMakeLists.txt
+++ b/collection/CMakeLists.txt
@@ -16,7 +16,7 @@ else ()
 
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
 
-    set(SOURCE_FILES MPSCQueue.h List.h CBitset.h LIFO.h)
+    set(SOURCE_FILES MPSCQueue.h List.h CBitset.h LIFO.h Barrier.cpp Barrier.h)
 
     add_library(collection_lib STATIC ${SOURCE_FILES})
     set_target_properties(collection_lib PROPERTIES LINKER_LANGUAGE CXX)
