--- a/collection/test/CMakeLists.txt
+++ b/collection/test/CMakeLists.txt
@@ -17,7 +17,7 @@ else ()
 
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
 
-    set(SOURCE_FILES ListTest.cpp CBitsetTest.cpp QueueTest.cpp LIFOTest.cpp)
+    set(SOURCE_FILES ListTest.cpp BitsetTest.cpp QueueTest.cpp FifoTest.cpp)
     ##############
     # Unit Tests
     ##############
