--- a/journal/CMakeLists.txt
+++ b/journal/CMakeLists.txt
@@ -15,7 +15,8 @@ else ()
 
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
 
-    set(SOURCE_FILES Journal.h io/JournalFile.h io/JournalPageBufferedFileWriter.h)
+    set(SOURCE_FILES
+                     JournalFileProvider.cpp)
 
     add_library(journal_lib STATIC ${SOURCE_FILES})
     set_target_properties(journal_lib PROPERTIES LINKER_LANGUAGE CXX)
