--- a/segment/CMakeLists.txt
+++ b/segment/CMakeLists.txt
@@ -28,12 +28,9 @@ else ()
 
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
 
-    set(SOURCE_FILES SegmentReservations.h
+    set(SOURCE_FILES
                      Segment.cpp
                      Segments.h
-                     PresentSet.h
-                     ReservationSet.cpp
-                     ReservationSet.h
                      Context.h)
 
     add_library(segment_lib STATIC ${SOURCE_FILES})
